syntax = "proto3";

package post;

import "google/protobuf/empty.proto";

service PostService {
  rpc GetAuthStats (UserIdRequest) returns (AuthStatsResponse);
  rpc CreatePost (CreatePostRequest) returns (PostResponse);
  rpc ListPosts (google.protobuf.Empty) returns (ListPostsResponse);
  rpc GetPostsByTagId (GetPostByTagIdRequest) returns (ListPostsResponse);
}

// Request
message UserIdRequest {
  string author_id = 1;
}
message CreatePostRequest {
  string author_id = 1;
  string content = 2;
  string link = 3;
  string image_url = 4;
  TagIds tag_ids = 5;
}
message GetPostByTagIdRequest {
  string tag_id = 1;
}

// Response
message AuthStatsResponse {
  int32 posts_count = 1;
  int32 total_views = 2;
  int32 thanks_count = 3;
}
message PostResponse {
  string id = 1;
  string author_id = 2;
  string content = 3;
  string link = 4;
  string image_url = 5;
  string created_at = 6;
  repeated Tag tags = 7;
}
message ListPostsResponse {
  repeated PostResponse posts = 1;
}

// Type
message TagIds {
  repeated string ids = 1;
}
message Tag {
  string id = 1;
  string name = 2;
}